--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 	<iframe src="https://1v1.lol/" width = "1200" height = "800"></iframe>
 	</section>	
 	
-      <section>Second Page S1</section>
-      <section>Second Page S2</section>
+      <section>Made by @albertoforreals on insta</section>
+      <section>Made by alberto</section>
 	</section>
 	</div>
 	</div>
