--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<div class="reveal">
 	<div class="slides">
 	<section>
-	<iframe src="https://gnhustgames.github.io/1v1lol/" width = "1200" height = "800"></iframe>
+	<iframe src="https://1v1lolgame.github.io/" width = "1200" height = "800"></iframe>
 	</section>	
 	
       <section>Made by @albertoforreals on insta</section>
