--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<h1>all rights reserved by alberto (follow @albertoesprojects on isnta)</h1>
+		<h1>(follow @albertoesprojects on isnta)</h1>
 		<title>Canvas</title>
 
 		<link rel="stylesheet" href="dist/reset.css">
@@ -20,7 +20,7 @@
 		<div class="reveal">
 	<div class="slides">
 	<section>
-	<iframe src="https://chatgpt.com/" width = "1200" height = "800"></iframe>
+	<iframe src="https://www.questionai.com/" width = "1200" height = "800"></iframe>
 	</section>	
 	
       <section>Made by @albertoforreals on insta</section>
